# Embedded-AIRuntime

./: CMakeLists-oc.txt  CMakeLists.txt  README.md
extractor/1/: info.json
extractor/10/: info.json
extractor/11/: info.json
extractor/12/: info.json
extractor/13/: info.json
extractor/14/: info.json
extractor/15/: info.json
extractor/16/: info.json
extractor/18/: info.json
extractor/19/: info.json
extractor/2/: info.json
extractor/20/: info.json
extractor/21/: info.json
extractor/22/: info.json
extractor/23/: info.json
extractor/24/: info.json
extractor/26/: info.json
extractor/27/: info.json
extractor/28/: info.json
extractor/29/: info.json
extractor/3/: info.json
extractor/30/: info.json
extractor/31/: info.json
extractor/32/: info.json
extractor/33/: info.json
extractor/4/: info.json
extractor/5/: info.json
extractor/6/: info.json
extractor/7/: info.json
extractor/8/: info.json
extractor/9/: info.json
libpaddlelite/include/: paddle_use_kernels.h  paddle_use_ops.h
models/: traffic.param  traffic.txt
models/anpr/: AnprDetect.param  AnprDetect.txt
models/anpr/ocr/: anpr.txt
models/anpr/ocr/det/inference/: inference.pdmodel
models/anpr/ocr/rec/inference/: inference.pdiparams.info  inference.pdmodel
src/: README.md  main_AICore.cpp  main_poc.cpp  requirements.txt
src/AiCore/: AIExecutor.hpp  AITypeData.hpp  AIUserFactory.cpp  AIUserFactory.hpp  AiTypeData.hpp  MotionDetector.cpp  MotionDetector.hpp  ObjectDetector.cpp  ObjectDetector.hpp
src/AiCore/face_detection/retinaface/: FaceDetector.cpp  FaceDetector.hpp
src/AiCore/face_recognizer/: SnpeInsightface.cpp  SnpeInsightface.hpp  SnpeMtcnn.cpp  SnpeMtcnn.hpp  SnpeRetinaFace.cpp  SnpeRetinaFace.hpp  comm_lib.cpp  comm_lib.hpp  mtcnn.hpp
src/AiCore/face_recognizer/MXNET/: Mxnet_extract.hpp
src/AiCore/face_recognizer/NCNN/: Arcface.cpp  Arcface.hpp
src/AiCore/mnn/: MnnDetector.cpp  MnnDetector.hpp  MnnFaceDetector.cpp  MnnFaceDetector.hpp  MnnFaceLandmark.cpp  MnnFaceLandmark.hpp  MnnRetinaface.cpp  MnnRetinaface.hpp  UltraFace.cpp  UltraFace.hpp  main.cpp
src/AiCore/ncnn/: NcnnDetector.cpp  NcnnDetector.hpp  NcnnExecutor.cpp  NcnnExecutor.hpp
src/AiCore/snpe/: SnpeCommLib.cpp  SnpeCommLib.hpp  SnpeExecutor.cpp  SnpeExecutor.hpp  SnpeMobilenetSSD.cpp  SnpeMobilenetSSD.hpp  Util.cpp  Util.hpp
src/AiCore/snpe/classifier/: SnpeClassifier.cpp  SnpeClassifier.hpp
src/AiCore/snpe/detector/: SnpeDetector.cpp  SnpeDetector.hpp  SnpeMobilenetSSD.cpp
src/AiCore/snpe/facedetector/: scrfd.cpp  scrfd.hpp
src/AiCore/sort-tracker/: Hungarian.cpp  ObjectTracker.cpp  ObjectTracker.hpp  ObjectTracking.cpp  TrackerManager.cpp  TrackerManager.hpp
src/AiCore/tflite/: Multilabel.cpp  Multilabel.hpp  TfLiteRuntime.cpp  TfLiteRuntime.hpp  TfliteDetector.cpp  TfliteDetector.hpp
src/AiCore/utils/: ColorClassifier.cpp  ColorClassifier.hpp  ImageProcessor.cpp  ImageProcessor.hpp  LoadLabel.hpp
src/AiEngines/Anpr/: AnprConfig.hpp  AnprDetector.cpp  AnprDetector.hpp  AnprRecognizer.cpp  AnprRecognizer.hpp  LicenseOcr.hpp
src/AiEngines/Anpr/PaddleOCR-Android/: ocr_db_crnn.cpp
src/AiEngines/Anpr/PaddleOCR-Linux-x64/: ocr_cls.cpp  ocr_det.h  ocr_rec.cpp  ocr_rec.h  postprocess_op.cpp  preprocess_op.cpp  preprocess_op.h  utility.cpp
src/AiEngines/Anpr/ocr/: db_post_process.cpp  db_post_process.hpp
src/AiEngines/CoreObject/: CrowdDetector.cpp  CrowdDetector.hpp  Detector.cpp  Detector.hpp  DisappearanceDetector.cpp  DisappearanceDetector.hpp  IntrusionDetector.cpp  IntrusionDetector.hpp  ObjectCrossline.hpp  TypeData.hpp  Utility.cpp  Utility.hpp
src/AiEngines/CoreTraffic/BlowRedLight/: BlowRedlightDetector.cpp  BlowRedlightDetector.hpp
src/AiEngines/CoreTraffic/Invade/: InvadeDetector.cpp  InvadeDetector.hpp
src/AiEngines/CoreTraffic/Oppose/: OpposeDetector.cpp  OpposeDetector.hpp
src/AiEngines/CoreTraffic/Parking/: ParkingDetector.cpp  ParkingDetector.hpp
src/AiEngines/CoreTraffic/Traffic/: TrafficDetector.cpp  TrafficDetector.hpp
src/AiEngines/CoreTraffic/Utility/: Utility.hpp
src/AiEngines/CoreTraffic/WrongLane/: WrongLaneDetector.cpp  WrongLaneDetector.hpp
src/AiEngines/FeatureExtractor/: BackgroundSubtractor.cpp  BackgroundSubtractor.hpp  FeatureExtractor.cpp  FeatureExtractor.hpp
src/AiEngines/ITS/: TrafficConfig.hpp  TrafficManager.cpp  TrafficManager.hpp
src/AiEngines/ITS/Anpr/: AnprConfig.hpp  AnprDetector.hpp  AnprRecognizer.cpp  AnprRecognizer.hpp  LicenseOcr.hpp
src/AiEngines/ITS/Anpr/PaddleOCR-Linux-x64/: PaddleOCRx64.cpp  PaddleOCRx64.hpp  config.cpp  config.h  config.txt  ocr_cls.h  ocr_det.cpp  readme_en.md
src/AiEngines/ITS/Violation/: Oppose.cpp  Oppose.hpp  Oppose1.cpp  Oppose1.hpp  Violation.hpp
src/AiEngines/Traffic/: Oppose.cpp  Oppose.hpp  VehicleDetector.cpp  VehicleDetector.hpp
src/AiEngines/traffic/: Intrusion.cpp  Intrusion.hpp  Oppose.cpp  Oppose.hpp
src/examples/: AIProcessor.cpp  AIProcessor.hpp  Anpr.cpp  Anpr.hpp  DecodeFrame.cpp  Decoder.hpp  DecoderThread.cpp  DecoderThread.hpp  Extractor.cpp  Extractor.hpp  FFmpegDecoder.cpp  FFmpegDecoder.hpp  FrameManager.cpp  FrameManager.hpp  OpencvDecoder.cpp  OpencvDecoder.hpp  Traffic.cpp  Traffic.hpp  TrafficDetector.cpp  TrafficDetector.hpp  main.cpp
src/main/: main.cpp  main_traffic.cpp
